--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,11 +15,13 @@ body {
     background-color: white;
 }
 .description {
-    height: 200px;
+    position: relative;
+    height: 120px;
     width: 70%;
     color: black;
-    font-size: 25px;
+    font-size: 22px;
     font-family: myFont;
+    margin: 60px 0px 30px 50px;
 }
 
 form {
