--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@
 body {
     margin: 0px;
     display: flex;
+    font-size: min(16px, 100%);
 }
 
 .content {
@@ -19,9 +20,9 @@ body {
     height: 120px;
     width: 70%;
     color: black;
-    font-size: 22px;
+    font-size: 1.6vw;
     font-family: myFont;
-    margin: 60px 0px 30px 50px;
+    margin: 60px 50px 30px 50px;
 }
 
 form {
@@ -54,4 +55,8 @@ form {
 
 .form-part-third {
     background-color: white;
+}
+
+#action-call {
+    color: white;
 }
