--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ form {
 .input-fields {
     display: flex;
     justify-content: space-between;
-    padding: 0px 0px 40px 0px;
+    padding: 0px 0px 30px 0px;
     margin-left: 50px;
     margin-right: 100px;
 }
@@ -46,14 +46,14 @@ form {
 .form-part-first {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 350px;
     gap: 10px;
 }
 
 .form-part-second {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 350px;
     gap: 10px;
 }
 
@@ -77,7 +77,7 @@ form {
     font-size: 1em;
 }
  input {
-     width: 24vw;
+    width: 270px;
     padding: 5px;
     box-sizing: border-box;
     border: 1px solid #555;
@@ -104,8 +104,8 @@ form {
 
  #create-button {
     margin: 30px 50px 30px 50px;
-    height: 6vh;;
-    width: 13vw;
+    height: 40px;;
+    width: 170px;
     font-size: 1em;
     font-family: myFont;
     background-color: hsl(32, 94%, 60%);
