--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,6 @@ form {
 .input-fields {
     display: flex;
     justify-content: space-between;
-    padding: 0px 0px 30px 0px;
     margin-left: 50px;
     margin-right: 100px;
 }
@@ -169,6 +168,14 @@ form {
     background-size: cover;
     height: auto;
     width: 35vw;
+ }
+
+ #validation-message {
+    height: 30px;
+    background-color: hsl(32, 94%, 60%);
+    color: black;
+    margin-left: 50px;
+    font-family: myFont;
  }
 
  
